[package]
name = "gxt2bed"
version = "0.1.0"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "Fastest GTF/GFF-to-BED converter chilling around"
homepage = "https://github.com/alejandrogzi/gxt2bed"
repository = "https://github.com/alejandrogzi/gxt2bed"
readme = "README.md"
keywords = ["bed", "gtf", "gff" ,"cli", "convert"]
categories = ["command-line-utilities", "science"]

[dependencies]
thiserror = "1.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
clap = {version = "4.0", features = ["derive"]}
libc = "0.2.151"
log = "0.4.14"
simple_logger = "4.0.0"
indoc = "2.0"
colored = "2.0.0"


[profile.release]
lto = true

[lib]
name = "gxt2bed"
path = "src/lib.rs"


