[package]
name = "gxf2bed"
version = "0.2.5"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
edition = "2021"
license = "MIT"
description = "fastest GTF/GFF-to-BED converter chilling around"
homepage = "https://github.com/alejandrogzi/gxf2bed"
repository = "https://github.com/alejandrogzi/gxf2bed"
readme = "README.md"
keywords = ["bed", "gtf", "gff", "cli", "convert"]
categories = ["command-line-utilities", "science"]
default-run = "gxf2bed"

[dependencies]
thiserror = "1.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2.151"
log = "0.4.14"
simple_logger = "4.0.0"
indoc = "2.0"
colored = "2.0.0"
hashbrown = { version = ">0.12", features = ["rayon"] }
flate2 = "1.0.20"

[profile.release]
lto = true

[lib]
name = "gxf2bed"
path = "src/lib.rs"

[[bin]]
name = "gxf2bed"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "bench/bench.rs"
